Mon Sep 15 18:50:16 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * java/build_scripts/JavaTypeSupportImpl.pm:

          Include the new idl2jni_jni.h to pick up visibility support for GCC4.

        * java/idl2jni/runtime/i2jrt_TAOObject.cpp:

          Added some error checking, still more to do.

        * java/idl2jni/runtime/idl2jni_runtime.mpc:

          Use OpenDDS's version number instead of TAO's.

Mon Sep 15 14:35:49 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * bin/auto_run_tests.pl:

          Restore current directory after processing a test list.

Sat Sep 13 17:52:27 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * java/idl2jni/codegen/im_jni.cpp:

          Remove use of .in() from object refernence sequence's elements.
          Older versions of TAO return a ptr here and not a var-like object.

Fri Sep 12 21:56:05 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * java/idl2jni/runtime/idl2jni_jni.h:

          Sun's jni.h doesn't define JNIEXPORT to anything on GCC v4.  We need
          this to be an actual "export" when hidden visibility is used.

        * java/idl2jni/runtime/idl2jni_runtime.h:
        * java/idl2jni/runtime/idl2jni_BaseJavaPeer.h:
        * java/build_scripts/javah_wrapper.pl:

          Make use of idl2jni_jni.h in committed and generated code.

        * java/idl2jni/codegen/idl_mapping.h:
        * java/idl2jni/codegen/im_jni.cpp:

          Use .in() and duplicate() when copying a TAO objref sequence element
          to Java.  Cleaned up whitespace and formatting.

Thu Sep 11 22:02:27 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * DDS.mwc:

          Removed "cmdline" setting that should have no effect.

        * java:

          Added this entire subtree for the "OpenDDS Extension for Java",
          which allows Java applications to use OpenDDS.  This will not be
          built unless the MPC feature "java" is enabled.  JAVA_HOME and
          JAVA_PLATFORM environment variables must be set.
