@@ -1,3 +1,10 @@
+Mon Sep 15 21:56:04 UTC 2008  Adam Mitz  <mitza@ociweb.com>
+
+        * java/idl2jni/codegen/im_jni.cpp:
+        * java/idl2jni/runtime/idl2jni_runtime.h:
+
+          Eliminated GCC warnings.
+
 Mon Sep 15 18:50:16 UTC 2008  Adam Mitz  <mitza@ociweb.com>
 
         * java/build_scripts/JavaTypeSupportImpl.pm:
